src/main/java/at/jku/dke/task_app/uml/evaluation/atg/gen/PlantUML_ATGParser.java
// Generated from PlantUML_ATG.g4 by ANTLR 4.13.1
package at.jku.dke.task_app.uml.evaluation.atg.gen;
import at.jku.dke.task_app.uml.evaluation.atg.objects.UMLAssociation;
import at.jku.dke.task_app.uml.evaluation.atg.objects.UMLClass;
import at.jku.dke.task_app.uml.evaluation.atg.objects.UMLAttribute;
import at.jku.dke.task_app.uml.evaluation.atg.objects.UMLRelationship;
import at.jku.dke.task_app.uml.evaluation.atg.objects.UMLRelationshipEntity;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlantUML_ATGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
		T__31=32, T__32=33, T__33=34, WS=35, Identifier=36, Integer=37;
	public static final int
		RULE_classDiagram = 0, RULE_association = 1, RULE_noteConnection = 2,
		RULE_constraints = 3, RULE_constrainttype = 4, RULE_note = 5, RULE_noteName = 6,
		RULE_noteText = 7, RULE_classDefinition = 8, RULE_multiRelationship = 9,
		RULE_attribute = 10, RULE_attributeModifier = 11, RULE_relationship = 12,
		RULE_relationTyp = 13, RULE_participant = 14, RULE_participantMultiplicity = 15,
		RULE_visibility = 16, RULE_abstractModifier = 17, RULE_className = 18,
		RULE_parentClassName = 19, RULE_attributeName = 20, RULE_label = 21, RULE_multiRelationshipName = 22,
		RULE_labelMultiplicity = 23, RULE_cardinality = 24, RULE_start = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"classDiagram", "association", "noteConnection", "constraints", "constrainttype",
			"note", "noteName", "noteText", "classDefinition", "multiRelationship",
			"attribute", "attributeModifier", "relationship", "relationTyp", "participant",
			"participantMultiplicity", "visibility", "abstractModifier", "className",
			"parentClassName", "attributeName", "label", "multiRelationshipName",
			"labelMultiplicity", "cardinality", "start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@startuml'", "'@enduml'", "'('", "','", "')'", "'..'", "':'",
			"'{'", "'}'", "'disjoint'", "'overlapping'", "'Teilmenge'", "'Ungleich'",
			"'note'", "'\"'", "'as'", "'class'", "'extends'", "'diamond'", "'{ID}'",
			"'*--'", "'--'", "'<--'", "'---|>'", "'<|--'", "'*'", "'+'", "'-'", "'#'",
			"'~'", "'abstract'", "'?'", "'>'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, "WS",
			"Identifier", "Integer"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlantUML_ATG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	List<UMLClass> umlClasses = new ArrayList<>();
	 Map<String, List<UMLAttribute>> attributesMap = new HashMap<>();
	    List<UMLRelationship> relationships = new ArrayList<>();
	    Map<String, UMLClass> classMap = new HashMap<>();
	    String currentClassName; // To track current class in context for attributes
	    List<UMLAssociation> associations = new ArrayList<>();

	public PlantUML_ATGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDiagramContext extends ParserRuleContext {
		public List<ClassDefinitionContext> classDefinition() {
			return getRuleContexts(ClassDefinitionContext.class);
		}
		public ClassDefinitionContext classDefinition(int i) {
			return getRuleContext(ClassDefinitionContext.class,i);
		}
		public List<RelationshipContext> relationship() {
			return getRuleContexts(RelationshipContext.class);
		}
		public RelationshipContext relationship(int i) {
			return getRuleContext(RelationshipContext.class,i);
		}
		public List<MultiRelationshipContext> multiRelationship() {
			return getRuleContexts(MultiRelationshipContext.class);
		}
		public MultiRelationshipContext multiRelationship(int i) {
			return getRuleContext(MultiRelationshipContext.class,i);
		}
		public List<ConstraintsContext> constraints() {
			return getRuleContexts(ConstraintsContext.class);
		}
		public ConstraintsContext constraints(int i) {
			return getRuleContext(ConstraintsContext.class,i);
		}
		public List<NoteContext> note() {
			return getRuleContexts(NoteContext.class);
		}
		public NoteContext note(int i) {
			return getRuleContext(NoteContext.class,i);
		}
		public List<NoteConnectionContext> noteConnection() {
			return getRuleContexts(NoteConnectionContext.class);
		}
		public NoteConnectionContext noteConnection(int i) {
			return getRuleContext(NoteConnectionContext.class,i);
		}
		public List<AssociationContext> association() {
			return getRuleContexts(AssociationContext.class);
		}
		public AssociationContext association(int i) {
			return getRuleContext(AssociationContext.class,i);
		}
		public ClassDiagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDiagram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterClassDiagram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitClassDiagram(this);
		}
	}

	public final ClassDiagramContext classDiagram() throws RecognitionException {
		ClassDiagramContext _localctx = new ClassDiagramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classDiagram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__0);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 72880930824L) != 0)) {
				{
				setState(60);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(53);
					classDefinition();
					}
					break;
				case 2:
					{
					setState(54);
					relationship();
					}
					break;
				case 3:
					{
					setState(55);
					multiRelationship();
					}
					break;
				case 4:
					{
					setState(56);
					constraints();
					}
					break;
				case 5:
					{
					setState(57);
					note();
					}
					break;
				case 6:
					{
					setState(58);
					noteConnection();
					}
					break;
				case 7:
					{
					setState(59);
					association();
					}
					break;
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(T__1);

			                    System.out.println("All Classes: " + umlClasses);
			                    System.out.println("Attributes Map: " + attributesMap);
			                    System.out.println("Relationships: " + relationships);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssociationContext extends ParserRuleContext {
		public ClassNameContext className1;
		public ClassNameContext className2;
		public ClassNameContext className3;
		public List<ClassNameContext> className() {
			return getRuleContexts(ClassNameContext.class);
		}
		public ClassNameContext className(int i) {
			return getRuleContext(ClassNameContext.class,i);
		}
		public AssociationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_association; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterAssociation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitAssociation(this);
		}
	}

	public final AssociationContext association() throws RecognitionException {
		AssociationContext _localctx = new AssociationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_association);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__2);
			setState(69);
			((AssociationContext)_localctx).className1 = className();
			setState(70);
			match(T__3);
			setState(71);
			((AssociationContext)_localctx).className2 = className();
			setState(72);
			match(T__4);
			setState(73);
			match(T__5);
			setState(74);
			((AssociationContext)_localctx).className3 = className();

			                    UMLAssociation assoc = new UMLAssociation(classMap.get((((AssociationContext)_localctx).className1!=null?_input.getText(((AssociationContext)_localctx).className1.start,((AssociationContext)_localctx).className1.stop):null)).getName(), classMap.get((((AssociationContext)_localctx).className2!=null?_input.getText(((AssociationContext)_localctx).className2.start,((AssociationContext)_localctx).className2.stop):null)).getName(), classMap.get((((AssociationContext)_localctx).className3!=null?_input.getText(((AssociationContext)_localctx).className3.start,((AssociationContext)_localctx).className3.stop):null)).getName());
			                    associations.add(assoc);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteConnectionContext extends ParserRuleContext {
		public NoteNameContext noteName() {
			return getRuleContext(NoteNameContext.class,0);
		}
		public MultiRelationshipNameContext multiRelationshipName() {
			return getRuleContext(MultiRelationshipNameContext.class,0);
		}
		public NoteConnectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteConnection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterNoteConnection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitNoteConnection(this);
		}
	}

	public final NoteConnectionContext noteConnection() throws RecognitionException {
		NoteConnectionContext _localctx = new NoteConnectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_noteConnection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			noteName();
			setState(78);
			match(T__5);
			setState(79);
			multiRelationshipName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintsContext extends ParserRuleContext {
		public ClassNameContext className1;
		public ClassNameContext className2;
		public ClassNameContext className3;
		public ClassNameContext className4;
		public ConstrainttypeContext constrainttype() {
			return getRuleContext(ConstrainttypeContext.class,0);
		}
		public List<ClassNameContext> className() {
			return getRuleContexts(ClassNameContext.class);
		}
		public ClassNameContext className(int i) {
			return getRuleContext(ClassNameContext.class,i);
		}
		public ConstraintsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterConstraints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitConstraints(this);
		}
	}

	public final ConstraintsContext constraints() throws RecognitionException {
		ConstraintsContext _localctx = new ConstraintsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constraints);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__2);
			setState(82);
			((ConstraintsContext)_localctx).className1 = className();
			setState(83);
			match(T__3);
			setState(84);
			((ConstraintsContext)_localctx).className2 = className();
			setState(85);
			match(T__4);
			setState(86);
			match(T__5);
			setState(87);
			match(T__2);
			setState(88);
			((ConstraintsContext)_localctx).className3 = className();
			setState(89);
			match(T__3);
			setState(90);
			((ConstraintsContext)_localctx).className4 = className();
			setState(91);
			match(T__4);
			setState(92);
			match(T__6);
			setState(93);
			match(T__7);
			setState(94);
			constrainttype();
			setState(95);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstrainttypeContext extends ParserRuleContext {
		public LabelMultiplicityContext labelMultiplicity() {
			return getRuleContext(LabelMultiplicityContext.class,0);
		}
		public ConstrainttypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constrainttype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterConstrainttype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitConstrainttype(this);
		}
	}

	public final ConstrainttypeContext constrainttype() throws RecognitionException {
		ConstrainttypeContext _localctx = new ConstrainttypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constrainttype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				{
				setState(97);
				match(T__9);
				}
				break;
			case T__10:
				{
				setState(98);
				match(T__10);
				}
				break;
			case T__11:
				{
				{
				setState(99);
				match(T__11);
				setState(100);
				labelMultiplicity();
				}
				}
				break;
			case T__12:
				{
				{
				setState(101);
				match(T__12);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30266097664L) != 0)) {
					{
					setState(102);
					labelMultiplicity();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteContext extends ParserRuleContext {
		public NoteTextContext noteText() {
			return getRuleContext(NoteTextContext.class,0);
		}
		public NoteNameContext noteName() {
			return getRuleContext(NoteNameContext.class,0);
		}
		public NoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterNote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitNote(this);
		}
	}

	public final NoteContext note() throws RecognitionException {
		NoteContext _localctx = new NoteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_note);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__13);
			setState(108);
			match(T__14);
			setState(109);
			noteText();
			setState(110);
			match(T__14);
			setState(111);
			match(T__15);
			setState(112);
			noteName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(PlantUML_ATGParser.Identifier, 0); }
		public NoteNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterNoteName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitNoteName(this);
		}
	}

	public final NoteNameContext noteName() throws RecognitionException {
		NoteNameContext _localctx = new NoteNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_noteName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteTextContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(PlantUML_ATGParser.Identifier, 0); }
		public NoteTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterNoteText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitNoteText(this);
		}
	}

	public final NoteTextContext noteText() throws RecognitionException {
		NoteTextContext _localctx = new NoteTextContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_noteText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDefinitionContext extends ParserRuleContext {
		public AbstractModifierContext abstractModifier;
		public ClassNameContext className;
		public ParentClassNameContext parentClassName;
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public AbstractModifierContext abstractModifier() {
			return getRuleContext(AbstractModifierContext.class,0);
		}
		public ParentClassNameContext parentClassName() {
			return getRuleContext(ParentClassNameContext.class,0);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterClassDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitClassDefinition(this);
		}
	}

	public final ClassDefinitionContext classDefinition() throws RecognitionException {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_classDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2013265920L) != 0)) {
				{
				setState(118);
				visibility();
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__30) {
				{
				setState(121);
				((ClassDefinitionContext)_localctx).abstractModifier = abstractModifier();
				}
			}

			setState(124);
			match(T__16);
			setState(125);
			((ClassDefinitionContext)_localctx).className = className();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(126);
				match(T__17);
				setState(127);
				((ClassDefinitionContext)_localctx).parentClassName = parentClassName();
				}
			}


			                    UMLClass clazz = new UMLClass((((ClassDefinitionContext)_localctx).className!=null?_input.getText(((ClassDefinitionContext)_localctx).className.start,((ClassDefinitionContext)_localctx).className.stop):null));
			                    clazz.setAbstract((((ClassDefinitionContext)_localctx).abstractModifier!=null?_input.getText(((ClassDefinitionContext)_localctx).abstractModifier.start,((ClassDefinitionContext)_localctx).abstractModifier.stop):null) != null);
			                    if ((((ClassDefinitionContext)_localctx).parentClassName!=null?_input.getText(((ClassDefinitionContext)_localctx).parentClassName.start,((ClassDefinitionContext)_localctx).parentClassName.stop):null) != null && (((ClassDefinitionContext)_localctx).parentClassName!=null?_input.getText(((ClassDefinitionContext)_localctx).parentClassName.start,((ClassDefinitionContext)_localctx).parentClassName.stop):null) != null) {
			                        clazz.setParentClass(classMap.get((((ClassDefinitionContext)_localctx).parentClassName!=null?_input.getText(((ClassDefinitionContext)_localctx).parentClassName.start,((ClassDefinitionContext)_localctx).parentClassName.stop):null)));
			                    }
			                    umlClasses.add(clazz);
			                    classMap.put((((ClassDefinitionContext)_localctx).className!=null?_input.getText(((ClassDefinitionContext)_localctx).className.start,((ClassDefinitionContext)_localctx).className.stop):null), clazz);
			                    attributesMap.put((((ClassDefinitionContext)_localctx).className!=null?_input.getText(((ClassDefinitionContext)_localctx).className.start,((ClassDefinitionContext)_localctx).className.stop):null), new ArrayList<>());

			setState(131);
			match(T__7);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(132);
				attribute();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(138);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiRelationshipContext extends ParserRuleContext {
		public MultiRelationshipNameContext multiRelationshipName() {
			return getRuleContext(MultiRelationshipNameContext.class,0);
		}
		public MultiRelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiRelationship; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterMultiRelationship(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitMultiRelationship(this);
		}
	}

	public final MultiRelationshipContext multiRelationship() throws RecognitionException {
		MultiRelationshipContext _localctx = new MultiRelationshipContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multiRelationship);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__18);
			setState(141);
			multiRelationshipName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public AttributeNameContext attributeName;
		public AttributeModifierContext attributeModifier;
		public AttributeNameContext attributeName() {
			return getRuleContext(AttributeNameContext.class,0);
		}
		public AttributeModifierContext attributeModifier() {
			return getRuleContext(AttributeModifierContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUML_ATGListener ) ((PlantUML_ATGListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			((AttributeContext)_localctx).attributeName = attributeName();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(144);
				((AttributeContext)_localctx).attributeModifier = attributeModifier();
				}
			}


			                    UMLAttribute attr = new UMLAttribute((((AttributeContext)_localctx).attributeName!=null?_input.getText(((AttributeContext)_localctx).attributeName.start,((AttributeContext)_localctx).attributeName.stop):null));
			                    if((((AttributeContext)_localctx).attributeModifier!=null?_input.getText(((AttributeContext)_localctx).attributeModifier.start,((AttributeContext)_localctx).attributeModifier.stop):null) != null){
			                    attr.setType((((AttributeContext)_localctx).attributeModifier!=null?_input.getText(((AttributeContext)_localctx).attributeModifier.start,((AttributeContext)_localctx).attributeModifier.stop):null));
			                    }
			                    attributesMap.get(currentClassName).add(attr);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
